# mcp-api-bridge

./: .gitignore  PLAN.md  README.md  UPWORK_PROFILE_NOTES.md  claude_desktop_config.json  pyproject.toml
docs/: index.html
src/api_bridge_mcp/: __init__.py  api_client.py  server.py
tests/: __init__.py  conftest.py  test_client.py  test_e2e_mcp.py  test_tools.py
