[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-bridge-mcp"
version = "1.0.0"
description = "REST API to MCP Server bridge — wrap any REST API as MCP tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Bryce Watson", email = "hi@brycewatson.com" }
]
license = { text = "MIT" }

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[project.scripts]
api-bridge = "api_bridge_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/api_bridge_mcp"]
